# SIGIL

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: aibom-wasm.yml  pages.yml
ci/: check-committed-wasm.mjs  check-site-home.mjs  check-site-themed-pages.mjs
crates/sigil-aibom-wasm/: Cargo.toml
crates/sigil-aibom-wasm/examples/: regen_invalid_samples.rs  regen_viewer_samples.rs  render_sample.rs
crates/sigil-aibom-wasm/src/: lib.rs
crates/sigil-aibom-wasm/tests/: determinism.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs
crates/sigil-cli/tests/: cli_assess.rs  ollama_cli.rs  parity.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: aibom.rs  evidence.rs  ir.rs  lib.rs  ollama.rs  report.rs
crates/sigil-core/src/assess/: mod.rs
crates/sigil-core/src/runtime/: listeners.rs  mod.rs
crates/sigil-core/src/safeisa/: mod.rs
crates/sigil-core/src/x86/: mod.rs
crates/sigil-core/tests/: aibom.rs  aibom_schema.rs  assess.rs  ollama.rs  safeisa.rs  x86.rs
crates/sigil-core/tests/common/: mod.rs
demos/: demo_clean_pass.sh  demo_llm_policy.sh  demo_suspicious_fail.sh
docs/: ai-bom-and-comparison.md  architecture-and-safety.md  ollama-inspection.md  sigil-overview.md
docs/superpowers/plans/: 2026-05-29-rust-rewrite-implementation.md  2026-05-30-aibom-json-schema.md  2026-05-30-ollama-license-provenance.md  2026-05-30-ollama-runtime-bind-detection.md
docs/superpowers/specs/: 2026-05-29-rust-rewrite-design.md  2026-05-30-aibom-json-schema-design.md  2026-05-30-ollama-runtime-bind-detection-design.md
examples/policies/: numeric_kernel.yml
examples/src/: clean_kernel.c  suspicious_kernel.c
legacy/python/sigil/: cli.py
legacy/python/sigil/assess/: capabilities.py  evidence.py  report.py
legacy/python/sigil/safeisa/: emulator.py
legacy/python/sigil/x86/: decoder.py
legacy/python/tests/: test_capabilities.py  test_safeisa_emulator.py  test_x86_pipeline.py
reports/2026-h1/: summary.json
reports/2026-h1/raw/: gemma3_4b.aibom.json  llama3.2_3b.aibom.json  mistral_7b.aibom.json  phi3_mini.aibom.json  qwen2.5_7b.aibom.json
schemas/: README.md  aibom-v1.schema.json
scripts/: audit-aggregate.sh  audit-models.txt  audit-run.sh  setup_macos_m3.sh
sigil/: cli.py
sigil/assess/: policy.py  report.py  verdict.py
sigil/ir/: model.py
sigil/safeisa/: emitter.py  emulator.py  model.py  trace.py
sigil/x86/: elf.py  lifter.py
site/: index.html  styles.css
site/assets/: HERO_IMAGE_PROMPT.md
site/compare/: index.html
site/compare/sigil-vs-builtins/: index.html
site/compare/sigil-vs-owasp-aibom-generator/: index.html
site/compare/sigil-vs-syft/: index.html
site/reports/2026-h1/: index.html
site/viewer/: index.html  viewer.css  viewer.js
site/viewer/pkg/: package.json  sigil_aibom_wasm.d.ts  sigil_aibom_wasm.js  sigil_aibom_wasm_bg.wasm  sigil_aibom_wasm_bg.wasm.d.ts
site/viewer/samples/: fail.aibom.json  pass.aibom.json  warn.aibom.json
site/viewer/samples/invalid/: bad-digest-prefix.aibom.json  empty-tool-name.aibom.json  manifest.json  non-hex-sha256.aibom.json  text-excerpt-too-long.aibom.json  unknown-nested-runtime.aibom.json  unknown-top-level-field.aibom.json  wrong-enum-verdict.aibom.json  wrong-schema-version.aibom.json
tests/: test_assess_capabilities.py  test_cli_smoke.py  test_ir_model.py  test_lifter.py  test_policy.py  test_policy_allowlist.py  test_report.py  test_safeisa_emulator.py
