[workspace]
members = [
    "crates/sigil-core",
    "crates/sigil-cli",
    "crates/sigil-aibom-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ultra-supara/SIGIL"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
iced-x86 = "1.21"
object = "0.36"
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
jsonschema = { version = "0.46", default-features = false }
