[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil"
version = "0.1.0"
description = "SIGIL: guarded lifter for AI-native binaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "pyelftools>=0.31", "capstone>=5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sigil = "sigil.cli:main"

[tool.setuptools]
packages = ["sigil", "sigil.x86", "sigil.ir", "sigil.safeisa", "sigil.assess", "sigil.llm"]
