[package]
name = "sigil-aibom-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm32 binding for SIGIL's AI-BOM Markdown renderer (browser viewer)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigil-core = { path = "../sigil-core" }
serde_json.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
sha2.workspace = true

[[example]]
name = "regen_viewer_samples"
path = "examples/regen_viewer_samples.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

