[package]
name = "sigil-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sigil-core = { path = "../sigil-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
